--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "snapsearch-client-nodejs": "~1.1.1",
-    "express": "~4.2.0"
+    "snapsearch-client-nodejs": "~1.1.5",
+    "express": "~4.2.0",
+    "morgan": "~1.5.2",
+    "compression": "~1.4.3",
+    "method-override": "~2.3.2"
   },
   "engines": {
     "node": ">= 0.8.0"
